# Kolko-i-Krzyzyk

./: .gitignore  CMakeLists.txt  GameState.h  README.md  game.cpp  main.cpp  my_func.cpp  my_func.h  ui.cpp  ui.h
tests/: test_my_func.cpp
